# Legacy

./: README.md
Old_ACQUISITION/Interface/METIS_Interface_Acquisition/: Form1.Designer.cs  Form1.cs  METIS_FormV2.csproj  METIS_FormV2.sln  Program.cs
Old_ACQUISITION/Interface/METIS_Interface_Acquisition/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Old_GUI/: README.md  load_txt.py
Old_GUI/SimpleView/: CMakeLists.txt  Chart.cxx  Chart.h  SimpleView.cxx  SimpleView.h  SimpleView.ui  cnpy.cxx  cnpy.h  main.cxx
